# net-saviour

./: .gitignore  README.md  docker-compose.yml  notes.txt
.env/: .dev
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml  worker.py
backend/app/: config.py  db.py  initial_data.py  main.py  redis.py  runner.py
backend/app/api/: auth.py  inventory.py  ping.py  tasks.py
backend/app/core/: celery_app.py  errors.py  utils.py
backend/app/core/hosts/: host.py
backend/app/core/inventory/: errors.py  tasks.py  utils.py
backend/app/core/runner/: tasks.py
backend/app/core/security/: utils.py
backend/app/core/security/auth/: base.py  tacacs.py
backend/app/core/tasks/: task.py  tasks.py  tracker.py
backend/app/crud/: inventory.py
backend/app/models/: pong.py
backend/app/models/edge/: inventory.py
backend/app/models/pydantic/: inventory.py  tasks.py
backend/app/schemas/: pong.py
backend/db/: database.esdl
backend/dbschema/: database.esdl  util.esdl
backend/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_ping.py
backend/tests/test_core/test_security/: test_tacacsauth.py  test_utils.py
compose/local/backend/: Dockerfile
compose/local/backend/api/: Dockerfile  entrypoint.sh
compose/local/backend/celery/flower/: start.sh
compose/local/backend/celery/worker/: start.sh
compose/local/backend/db/: Dockerfile  migrate.sh
