[tool.poetry]
name = "net-saviour"
version = "0.1.0"
description = "Network configuration and troubleshooting tool"
authors = ["Ryan Bradshaw <ryan@rbradshaw.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.1"
fastapi = "^0.61.1"
tacacs_plus = "^2.6"
edgedb = "^0.11.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^1.7.1"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
bpython = "^0.20"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
